--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/vv-logo-favicon.png" />
+    <link rel="icon" href="/vvv-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VV</title>
+    <title>VVV</title>
   </head>
   <body>
     <div id="app"></div>
